<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddTaskActivityPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F0F0"
    android:backgroundTint="#CAD8FB"
    tools:context=".activities.CreateTask">

    <TextView
        android:id="@+id/CreateActivityTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="72dp"
        android:background="#BADAF4"
        android:text="@string/CreateActivityTaskTile"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/CreateActivityTaskTitleInput"
        android:layout_width="270dp"
        android:layout_height="66dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="33dp"
        android:hint="@string/CreateActivityTaskInputHint"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateActivityTaskTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/CreateActivityTaskDescriptionLabel"
        android:layout_width="269dp"
        android:layout_height="24dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="97dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateActivityTaskTitleInput">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/CreateActivityTaskDescriptionInput"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:background="#0C56EA"
        android:backgroundTint="#C0D0F1"
        android:hint="@string/CreateActivityTaskDescriptionLabel"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateActivityTaskDescriptionLabel" />

    <Button
        android:id="@+id/CreateTaskActivitySubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="16dp"
        android:text="@string/CreateTaskActivityButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/TaskSpinnerSelector"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateActivityTaskDescriptionInput" />

    <Spinner
        android:id="@+id/team_contact_select"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/team_contact_select"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaskSpinnerSelector" />

    <ImageView
        android:id="@+id/AddProductActivityProductImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="77dp"
        android:contentDescription="@string/add_product_image"
        app:layout_constraintBottom_toTopOf="@+id/CreateTaskActivitySubmitButton"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/team_contact_select"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_launcher_background" />
</androidx.constraintlayout.widget.ConstraintLayout>