<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/MainActivityAddTask"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="128dp"
        android:text="@string/MainActivityAddTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/AllActivitiesTaskDetailActivities"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityTaskRecyclerView" />

    <Button
        android:id="@+id/mainActivityAllTask"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="128dp"
        android:text="@string/MainActivityAllTasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/AllActivitiesTaskDetailActivities"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityTaskRecyclerView" />

    <TextView
        android:id="@+id/MainActivityTextView"
        android:layout_width="141dp"
        android:layout_height="46dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="214dp"
        android:text="@string/MainActivityMyTasks"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/AllActivitiesTaskDetailActivities"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#3E9327"
        android:text="@string/MainActivitiesViewDetailsButton"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:circularflow_radiusInDP="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mainActivityAllTask"
        app:layout_constraintStart_toEndOf="@+id/MainActivityAddTask"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityTaskRecyclerView"
        app:layout_constraintVertical_bias="0.716" />

    <ImageButton
        android:id="@+id/SetUsernameActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="19dp"
        android:contentDescription="@string/AllActivitiesSetUsernameImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/MainActivityTextView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/MainActivityUsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="11dp"
        android:text="@string/UserNameTextView"
        app:layout_constraintBottom_toTopOf="@+id/MainActivityTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    TODO: Step 1-1: Add a RecyclerView in the Editor -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/MainActivityTaskRecyclerView"
        android:layout_width="0dp"
        android:layout_height="367dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/mainActivityAllTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MainActivityTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>